# notes-rag

./: Makefile  README.md  driver.py  pyproject.toml
db/: run-setup.sh  start-local-db.sh
src/notes_rag/: __init__.py  main.py  prompt.py  store.py
