[tool.poetry]
name = "notes_rag"
version = "0.1.0"
description = "A RAG application for querying a set of markdown files"
authors = ["Ethan Swan <ethanpswan@gmail.com>"]
license = "MIT"

[[tool.poetry.packages]]
include = "notes_rag"
from = "src"

[tool.poetry.scripts]
query = "notes_rag.main:prompt"

[tool.poetry.dependencies]
python = "3.11.4"
langchain = "^0.1.10"
tqdm = "^4.66.2"
unstructured = { version = "^0.12.5", extras = ["md"] }
sentence-transformers = "^2.5.1"
faiss-cpu = "^1.8.0"
langchain-openai = "^0.0.8"
llama-cpp-python = "^0.2.55"
prompt-toolkit = "^3.0.43"

[tool.poetry.group.dev.dependencies]
ipython = "^8.0"
ruff = "^0.3.1"
